# preprocessor

./: ARCHITECTURE.md  Cargo.toml  MIGRATION.md  README.md  build.rs
.github/workflows/: ci.yml  release.yml
scripts/: dev-setup  dev-setup.ps1
src/: README.md  cache.rs  changed.rs  cli.rs  config.rs  context.rs  editorial.rs  execution.rs  find_root.rs  git.rs  github.rs  identity.rs  layout.rs  lint.rs  main.rs  markdown.rs  network_upgrades.rs  pipeline.rs  preview.rs  print.rs  progress.rs  proposal.rs  proposal_catalog.rs  proposal_metadata.rs  serve.rs  tests.rs  workspace.rs  workspace_doc.md  zola.rs
src/search/: mod.rs  pagefind.rs
src/search/corpus/: chunks.rs  extract.rs  mod.rs  output.rs  schema.rs  splitter.rs  tests.rs
