[package]
name = "eips-zola"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
rust-version = "1.84.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.39"
eipw-preamble = "0.2.0"
lazy_static = "1.5.0"
pulldown-cmark = "0.12.2"
pulldown-cmark-to-cmark = "20.0.0"
regex = "1.11.1"
serde = { version = "1.0.217", features = ["derive"] }
snafu = "0.8.5"
toml = "0.8.19"
toml_datetime = { version = "0.6.8", features = ["serde"] }
walkdir = "2.5.0"
