[package]
name = "eips-zola"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
rust-version = "1.84.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.39"
clap = { version = "4.5.27", features = ["cargo", "derive"] }
directories = "6.0.0"
duct = "0.13.7"
eipw-lint = { git = "https://github.com/ethereum/eipw.git", branch = "schema-version", version = "0.10.0-dev", features = [ "tokio", "schema-version" ] }
eipw-snippets = { git = "https://github.com/ethereum/eipw.git", branch = "schema-version", version = "0.2.0-dev" }
eipw-preamble = "0.2.0"
enum-map = "2.7.3"
env_logger = "0.11.6"
figment = { version = "0.10.19", features = ["toml"] }
fslock = "0.2.1"
git2 = "0.20.0"
indicatif = "0.17.11"
indicatif-log-bridge = "0.2.3"
lazy_static = "1.5.0"
log = { version = "0.4.25", features = ["std"] }
pulldown-cmark = "0.12.2"
pulldown-cmark-to-cmark = "20.0.0"
regex = "1.11.1"
semver = {version = "1.0.25", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
sha3 = "0.10.8"
snafu = { version = "0.8.5", features = ["rust_1_81"] }
tokio = { version = "1.43.0", features = ["fs", "rt", "macros"] }
toml = "0.8.19"
toml_datetime = { version = "0.6.8", features = ["serde"] }
url = "2.5.4"
walkdir = "2.5.0"

[features]
backtrace = [ "snafu/backtrace", "eipw-lint/backtrace" ]
