[package]
name = "build-eips"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
rust-version = "1.84.0"
readme = "README.md"
repository = "https://github.com/ethereum/eips-build"
description = "Lint and render Ethereum Improvement Proposals (EIPs / ERCs)"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.deb]
maintainer = "Sam Wilson <sam@binarycake.ca>"
copyright = "2024-2025, Ethereum Foundation"
license-file = ["LICENSE.md", "0"]
section = "text"
priority = "optional"
depends = "$auto, libc6, libssl3, zlib1g, libgcc-s1, libgit2-1.5, git"

[dependencies]
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["cargo", "derive"] }
directories = "6.0.0"
duct = "1.1.1"
eipw-lint = { version = "0.10.0", features = [ "tokio", "schema-version" ] }
eipw-snippets = "0.2.0"
eipw-preamble = "0.3.0"
enum-map = "2.7.3"
env_logger = "0.11.8"
figment = { version = "0.10.19", features = ["toml"] }
fslock = "0.2.1"
git2 = "0.20.3"
indicatif = "0.18.3"
indicatif-log-bridge = "0.2.3"
lazy_static = "1.5.0"
log = { version = "0.4.29", features = ["std"] }
pulldown-cmark = "0.13.0"
pulldown-cmark-to-cmark = "22.0.0"
regex = "1.12.2"
semver = {version = "1.0.27", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
sha3 = "0.10.8"
snafu = { version = "0.8.9", features = ["rust_1_81"] }
tokio = { version = "1.48.0", features = ["fs", "rt", "macros"] }
toml = "0.9.10"
toml_datetime = { version = "0.7.5", features = ["serde"] }
url = "2.5.7"
walkdir = "2.5.0"
citationberg = { version = "0.6.1", features = ["json"] }
hayagriva = { version = "0.9.1", features = ["archive", "csl-json"], default-features = false }
iref = "3.2.2"

[features]
backtrace = [ "snafu/backtrace", "eipw-lint/backtrace" ]
